Correct the scrollbar overlap on the dashboard left nav This has to be done in the Seed project as well

--- a/src/app/base/less/base.less
+++ b/src/app/base/less/base.less
@@ -25,8 +25,7 @@
   width: 0;
   height: 100%;
   margin-left: -@dashboard-leftnav-width;
-  overflow-y: auto;
-  overflow-x:hidden;
+  overflow:hidden;
   background-color:@dashboard-leftnav-bg;
   border-right:1px solid @dashboard-leftnav-border;
   -webkit-transition: all 0.5s ease;
@@ -34,7 +33,6 @@
   -o-transition: all 0.5s ease;
   transition: all 0.5s ease;
 }
-
 
 #DashboardContent {
   width: 100%;
@@ -66,6 +64,8 @@
 }
 
 #BaseLeft {
+  height:100%;
+  overflow-y:auto;
   padding: @padding-base-horizontal;
   width: @dashboard-leftnav-width;
   white-space: nowrap;
